tests/machine/x/cpp/group_by_multi_join_sort.error
line 179: ../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp: In lambda function:
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:179:39: error: ‘std::declval<__struct4>’ is not a class member
  179 |                                      .std::declval<__struct4>()
      |                                       ^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:182:45: error: ‘std::declval<__struct4>’ is not a class member
  182 |                                            .std::declval<__struct4>()
      |                                             ^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:179:39: error: ‘std::declval<__struct4>’ is not a class member
  179 |                                      .std::declval<__struct4>()
      |                                       ^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:182:45: error: ‘std::declval<__struct4>’ is not a class member
  182 |                                            .std::declval<__struct4>()
      |                                             ^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:183:59: error: template argument 1 is invalid
  183 |                                            .l_discount))))>
      |                                                           ^
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:183:59: error: template argument 2 is invalid
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:186:22: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  186 |              __items.push_back((x.l.l_extendedprice * ((1 - x.l.l_discount))));
      |                      ^~~~~~~~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp: In instantiation of ‘<lambda()>::<lambda(auto:1)> [with auto:1 = int]’:
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:177:12:   required from here
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:176:37: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  176 |            return std::accumulate(v.begin(), v.end(), 0);
      |                                   ~~^~~~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:176:48: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  176 |            return std::accumulate(v.begin(), v.end(), 0);
      |                                              ~~^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp: In lambda function:
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:194:49: error: ‘std::declval<__struct4>’ is not a class member
  194 |                                                .std::declval<__struct4>()
      |                                                 ^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:197:55: error: ‘std::declval<__struct4>’ is not a class member
  197 |                                                      .std::declval<__struct4>()
      |                                                       ^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:194:49: error: ‘std::declval<__struct4>’ is not a class member
  194 |                                                .std::declval<__struct4>()
      |                                                 ^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:197:55: error: ‘std::declval<__struct4>’ is not a class member
  197 |                                                      .std::declval<__struct4>()
      |                                                       ^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:198:69: error: template argument 1 is invalid
  198 |                                                      .l_discount))))>
      |                                                                     ^
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:198:69: error: template argument 2 is invalid
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:201:32: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  201 |                        __items.push_back(
      |                                ^~~~~~~~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp: In instantiation of ‘<lambda()>::<lambda(auto:2)> [with auto:2 = int]’:
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:192:22:   required from here
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:191:47: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  191 |                      return std::accumulate(v.begin(), v.end(), 0);
      |                                             ~~^~~~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:191:58: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  191 |                      return std::accumulate(v.begin(), v.end(), 0);
      |                                                        ~~^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp: In lambda function:
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:174:22: error: no matching function for call to ‘std::vector<std::pair<double, __struct8> >::push_back(<brace-enclosed initializer list>)’
  174 |     __items.push_back(
      |     ~~~~~~~~~~~~~~~~~^
  175 |         {(-([&](auto v) {
      |         ~~~~~~~~~~~~~~~~~
  176 |            return std::accumulate(v.begin(), v.end(), 0);
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  177 |          })(([&]() {
      |          ~~~~~~~~~~~  
  178 |            std::vector<decltype((std::declval<__struct6>()
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  179 |                                      .std::declval<__struct4>()
      |                                      ~~~~~~~~~~~~~~~~~~~~~~~~~~
  180 |                                      .l_extendedprice *
      |                                      ~~~~~~~~~~~~~~~~~~
  181 |                                  ((1 - std::declval<__struct6>()
      |                                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  182 |                                            .std::declval<__struct4>()
      |                                            ~~~~~~~~~~~~~~~~~~~~~~~~~~
  183 |                                            .l_discount))))>
      |                                            ~~~~~~~~~~~~~~~~
  184 |                __items;
      |                ~~~~~~~~
  185 |            for (auto x : g.items) {
      |            ~~~~~~~~~~~~~~~~~~~~~~~~
  186 |              __items.push_back((x.l.l_extendedprice * ((1 - x.l.l_discount))));
      |              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  187 |            }
      |            ~          
  188 |            return __items;
      |            ~~~~~~~~~~~~~~~
  189 |          })())),
      |          ~~~~~~~      
  190 |          __struct8{g.key.c_custkey, g.key.c_name, ([&](auto v) {
      |          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  191 |                      return std::accumulate(v.begin(), v.end(), 0);
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  192 |                    })(([&]() {
      |                    ~~~~~~~~~~~
  193 |                      std::vector<decltype((std::declval<__struct6>()
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  194 |                                                .std::declval<__struct4>()
      |                                                ~~~~~~~~~~~~~~~~~~~~~~~~~~
  195 |                                                .l_extendedprice *
      |                                                ~~~~~~~~~~~~~~~~~~
  196 |                                            ((1 - std::declval<__struct6>()
      |                                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  197 |                                                      .std::declval<__struct4>()
      |                                                      ~~~~~~~~~~~~~~~~~~~~~~~~~~
  198 |                                                      .l_discount))))>
      |                                                      ~~~~~~~~~~~~~~~~
  199 |                          __items;
      |                          ~~~~~~~~
  200 |                      for (auto x : g.items) {
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~
  201 |                        __items.push_back(
      |                        ~~~~~~~~~~~~~~~~~~
  202 |                            (x.l.l_extendedprice * ((1 - x.l.l_discount))));
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  203 |                      }
      |                      ~
  204 |                      return __items;
      |                      ~~~~~~~~~~~~~~~
  205 |                    })()),
      |                    ~~~~~~
  206 |                    g.key.c_acctbal, g.key.n_name, g.key.c_address,
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  207 |                    g.key.c_phone, g.key.c_comment}});
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/13/vector:66,
                 from ../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:5:
/usr/include/c++/13/bits/stl_vector.h:1281:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = std::pair<double, __struct8>; _Alloc = std::allocator<std::pair<double, __struct8> >; value_type = std::pair<double, __struct8>]’
 1281 |       push_back(const value_type& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:35: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘const std::vector<std::pair<double, __struct8> >::value_type&’ {aka ‘const std::pair<double, __struct8>&’}
 1281 |       push_back(const value_type& __x)
      |                 ~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:1298:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(value_type&&) [with _Tp = std::pair<double, __struct8>; _Alloc = std::allocator<std::pair<double, __struct8> >; value_type = std::pair<double, __struct8>]’
 1298 |       push_back(value_type&& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1298:30: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘std::vector<std::pair<double, __struct8> >::value_type&&’ {aka ‘std::pair<double, __struct8>&&’}
 1298 |       push_back(value_type&& __x)
      |                 ~~~~~~~~~~~~~^~~

178 |            std::vector<decltype((std::declval<__struct6>()
179 |                                      .std::declval<__struct4>()
180 |                                      .l_extendedprice *
